# dmx

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: publish.yml  test.yml
docs/: memory-bank-v2-tasks.md
src/dmx/: __init__.py  _workflow_version.py  catalog.py  cli.py  exceptions.py  http_auth.py  server.py  tools.py
src/dmx/ide/: __init__.py  detect.py  emitters.py
src/dmx/rules/: system-prompt.md
src/dmx/skills/specialist/: dmx-docs.md  dmx-review.md  dmx-secure.md  dmx-test.md
src/dmx/skills/utility/: dmx-commit.md  dmx-create-branch.md  dmx-draft-pr-description.md  dmx-status.md  dmx-sync-branch.md  dmx-update-memory.md
src/dmx/skills/workflow/0-init/: dmx-init.md
src/dmx/skills/workflow/1-triage/: dmx-create-ticket.md  dmx-derive-ticket.md  dmx-hotfix.md
src/dmx/skills/workflow/2-plan/: dmx-plan.md
src/dmx/skills/workflow/3-build/: dmx-implement-next-phase.md  dmx-implement-next-task.md
src/dmx/skills/workflow/4-validate/: dmx-validate.md
src/dmx/skills/workflow/5-ship/: dmx-close-ticket.md  dmx-create-pr.md
src/dmx/skills/workflow/6-release/: dmx-create-release.md  dmx-draft-release-note.md  dmx-release-merge.md
tests/: __init__.py  conftest.py  test_catalog.py  test_cli.py  test_ide.py  test_server.py  test_tools.py
tests/__snapshots__/: test_ide.ambr
