[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepmodel-dmx"
version = "0.2.0"
description = "AI SDLC MCP server — skills and rules for any AI IDE."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
keywords = ["mcp", "ai", "sdlc", "cursor", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "starlette>=0.40",
]

[project.optional-dependencies]
watch = ["watchfiles>=0.21"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "syrupy>=4",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3",
    "types-PyYAML>=6.0",
    "httpx2>=2.2.0",
]

[project.scripts]
dmx = "dmx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dmx"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "C4", "FURB"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["dmx"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["dmx"]
omit = ["tests/*"]

[tool.coverage.report]
# Ratchet: 75 reached Phase 2. Raise to 90 once tools.py and CLI serve paths are covered.
fail_under = 75
show_missing = true
